--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>hobbit wycieczka</title>
   <style>
-    :root{--bg:#8f32a8;--text:#e6eef8}
+    :root{--bg:#8732a8;--text:#e6eef8}
     html,body{height:100%;margin:0}
     body{
       background:var(--bg);
@@ -30,6 +30,7 @@
   <h1>hobbit wycieczka</h1>
 </body>
 </html>
+
 
 
 
