--- a/index.html
+++ b/index.html
@@ -1,66 +1,198 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Hobbit Adventures</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Przygoda u Hobbita — Wycieczki</title>
+  <!-- Styl jest wbudowany tutaj; możesz przenieść zawartość <style> do osobnego pliku style.css -->
+  <style>
+  /* Podstawowy styl zgodny z podanym CSS, plus responsywne poprawki */
+  body, html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Georgia', serif;
+    color: #fff;
+    text-align: center;
+    background: #000;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    min-height: 100vh;
+  }
+
+  header {
+    padding: 20px;
+    background: rgba(0,0,0,0.5);
+    position: sticky;
+    top: 0;
+    z-index: 10;
+  }
+
+  header h1 {
+    margin: 0;
+    font-size: 2.6rem;
+  }
+
+  nav {
+    margin-top: 10px;
+  }
+
+  nav a {
+    margin: 0 12px;
+    color: #ffd700;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1rem;
+  }
+
+  section {
+    padding: 60px 20px;
+    background: rgba(0,0,0,0.3);
+  }
+
+  section:nth-child(even) {
+    background: rgba(0,0,0,0.5);
+  }
+
+  .prices {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin-top: 20px;
+  }
+
+  .card {
+    background: rgba(255,255,255,0.06);
+    padding: 18px;
+    border-radius: 12px;
+    min-width: 200px;
+    max-width: 320px;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.6);
+    border: 1px solid rgba(255,215,0,0.08);
+  }
+
+  .card h3 { margin: 0 0 8px 0; font-size: 1.2rem; color: #fff; }
+  .card p { margin: 6px 0; color: #eee; }
+  .price { font-weight: bold; color: #ffd700; font-size: 1.25rem; margin-top: 8px; }
+
+  .images {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin-top: 12px;
+  }
+
+  .images img {
+    width: 300px;
+    border: 3px solid #fff;
+    border-radius: 10px;
+    max-width: 90%;
+    height: auto;
+  }
+
+  footer {
+    padding: 18px;
+    background: rgba(0,0,0,0.5);
+    font-size: 0.95rem;
+  }
+
+  /* Responsywność */
+  @media (max-width: 800px) {
+    header h1 { font-size: 1.9rem; }
+    nav a { margin: 0 8px; font-size: 0.95rem; }
+    section { padding: 36px 16px; }
+    .card { min-width: 160px; }
+  }
+
+  @media (max-width: 420px) {
+    header h1 { font-size: 1.6rem; }
+    nav { display: flex; gap: 8px; flex-wrap: wrap; justify-content: center; }
+    nav a { font-size: 0.88rem; }
+    .images img { width: 100%; max-width: 360px; }
+    .prices { flex-direction: column; align-items: center; }
+  }
+  </style>
 </head>
 <body>
   <header>
-    <h1>The Hobbit Adventures</h1>
+    <h1>Przygoda u Hobbita</h1>
     <nav>
-      <a href="#story">Story</a>
-      <a href="#characters">Characters</a>
-      <a href="#gallery">Gallery</a>
+      <a href="#oferta">Oferta</a>
+      <a href="#program">Program</a>
+      
     </nav>
   </header>
 
-  <section id="story">
-    <h2>About the Story</h2>
-    <p>
-      Follow the journey of Bilbo Baggins, a hobbit who leaves his cozy home to embark on an unexpected adventure across Middle-earth.
-    </p>
-  </section>
+  <main>
+    <section id="oferta">
+      <h2>Opis wycieczki — pakiety</h2>
+      <p>Wybierz pakiet dopasowany do Twojej przygody. Ceny podane w złotych monetach.</p>
 
-  <section id="characters">
-    <h2>Characters</h2>
-    <ul>
-      <li>Bilbo Baggins – The brave hobbit protagonist</li>
-      <li>Gandalf – The wise wizard</li>
-      <li>Thorin Oakenshield – Leader of the dwarves</li>
-      <li>Smaug – The fearsome dragon</li>
-    </ul>
-  </section>
+      <div class="prices">
+        <div class="card">
+          <h3>Zwykła wycieczka</h3>
+          <p>Spokojny spacer po hobbickich wzgórzach, wizyta przy okrągłych drzwiach i podstawowe atrakcje.</p>
+          <div class="price">30 złotych monet</div>
+        </div>
 
-  <section id="gallery">
-    <h2>Gallery</h2>
-    <div class="images">
-      <img src="hobbit1.jpg" alt="Bilbo's Journey">
-      <img src="hobbit2.jpg" alt="Gandalf">
-      <img src="hobbit3.jpg" alt="Middle-earth">
-    </div>
-  </section>
+        <div class="card">
+          <h3>Wycieczka z przewodnikiem</h3>
+          <p>Dołącz do przewodnika, który opowie legendy, pokaże sekrety wioski i miejsca niedostępne dla innych.</p>
+          <div class="price">40 złotych monet</div>
+        </div>
+
+        <div class="card">
+          <h3>Wycieczka VIP</h3>
+          <p>Przewodnik, tradycyjny posiłek z kuchni Hobbita oraz wstęp do hobbickiego ZOO — pełna, całodzienna przygoda.</p>
+          <div class="price">50 złotych monet</div>
+        </div>
+      </div>
+    </section>
+
+    <section id="program">
+      <h2>Co będziemy robić na wycieczce?</h2>
+      <p>Oto przykładowy plan i atrakcje — zależnie od wybranego pakietu program może być rozszerzony.</p>
+
+      <div class="card" style="display:inline-block; margin-top:16px;">
+        <h3>Plan dnia</h3>
+        <p><strong>Start:</strong> Spotykamy się przy głównej bramie wioski.</p>
+        <p><strong>Spacer:</strong> Przechadzka po pagórkowatych ścieżkach, podziwianie krajobrazów i hobbickich chat.</p>
+        <p><strong>Wnętrze norki:</strong> Zajrzymy do domu Hobbita — okrągłe drzwi, przytulna kuchnia i salon.</p>
+        <p><strong>Targ i smakołyki:</strong> Na targu można zobaczyć rękodzieło i spróbować przekąsek (część pakietów).</p>
+        <p><strong>Opowieści:</strong> Przewodnik (w pakiecie 40 i VIP) opowie o Bilbie, Frodo i dawnych przygodach.</p>
+        <p><strong>Gospoda:</strong> W wersji VIP zatrzymujemy się na tradycyjny posiłek.</p>
+        <p><strong>ZOO:</strong> VIP obejmuje wizytę w hobbickim ZOO — spotkamy puszyste długousy i inne niespotykane stworzenia.</p>
+      </div>
+
+      <p style="margin-top:14px; color:#ffd;">Na koniec krótkie podsumowanie i możliwość zakupienia pamiątek.</p>
+    </section>
+
+    
+  </main>
 
   <footer>
-    <p>&copy; 2025 Hobbit Adventures. All rights reserved.</p>
+    <p>Ta strona była stworzona przez Tigrana Senia</p>
   </footer>
 
+  <!-- Vanta.js tło - zachowano z oryginalnego kodu -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.fog.min.js"></script>
   <script>
-    VANTA.FOG({
-      el: "body",
-      mouseControls: true,
-      touchControls: true,
-      gyroControls: false,
-      minHeight: 200.00,
-      minWidth: 200.00,
-      highlightColor: 0xffcc00,
-      midtoneColor: 0x336633,
-      lowlightColor: 0x222222,
-      baseColor: 0x112233
-    });
+    if (typeof VANTA !== 'undefined') {
+      VANTA.FOG({
+        el: "body",
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        minHeight: 200.00,
+        minWidth: 200.00,
+        highlightColor: 0xffcc00,
+        midtoneColor: 0x336633,
+        lowlightColor: 0x222222,
+        baseColor: 0x112233
+      });
+    }
   </script>
 </body>
 </html>
