--- a/index.html
+++ b/index.html
@@ -1,135 +1,35 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Przygoda u Hobbita — Wycieczki</title>
-  <!-- Styl jest wbudowany tutaj; możesz przenieść zawartość <style> do osobnego pliku style.css -->
-  <style>
-  /* Podstawowy styl zgodny z podanym CSS, plus responsywne poprawki */
-  body, html {
-    margin: 0;
-    padding: 0;
-    font-family: 'Georgia', serif;
-    color: #fff;
-    text-align: center;
-    background: #000;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    min-height: 100vh;
-  }
-
-  header {
-    padding: 20px;
-    background: rgba(0,0,0,0.5);
-    position: sticky;
-    top: 0;
-    z-index: 10;
-  }
-
-  header h1 {
-    margin: 0;
-    font-size: 2.6rem;
-  }
-
-  nav {
-    margin-top: 10px;
-  }
-
-  nav a {
-    margin: 0 12px;
-    color: #ffd700;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 1rem;
-  }
-
-  section {
-    padding: 60px 20px;
-    background: rgba(0,0,0,0.3);
-  }
-
-  section:nth-child(even) {
-    background: rgba(0,0,0,0.5);
-  }
-
-  .prices {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-    margin-top: 20px;
-  }
-
-  .card {
-    background: rgba(255,255,255,0.06);
-    padding: 18px;
-    border-radius: 12px;
-    min-width: 200px;
-    max-width: 320px;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.6);
-    border: 1px solid rgba(255,215,0,0.08);
-  }
-
-  .card h3 { margin: 0 0 8px 0; font-size: 1.2rem; color: #fff; }
-  .card p { margin: 6px 0; color: #eee; }
-  .price { font-weight: bold; color: #ffd700; font-size: 1.25rem; margin-top: 8px; }
-
-  .images {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-    margin-top: 12px;
-  }
-
-  .images img {
-    width: 300px;
-    border: 3px solid #fff;
-    border-radius: 10px;
-    max-width: 90%;
-    height: auto;
-  }
-
-  footer {
-    padding: 18px;
-    background: rgba(0,0,0,0.5);
-    font-size: 0.95rem;
-  }
-
-  /* Responsywność */
-  @media (max-width: 800px) {
-    header h1 { font-size: 1.9rem; }
-    nav a { margin: 0 8px; font-size: 0.95rem; }
-    section { padding: 36px 16px; }
-    .card { min-width: 160px; }
-  }
-
-  @media (max-width: 420px) {
-    header h1 { font-size: 1.6rem; }
-    nav { display: flex; gap: 8px; flex-wrap: wrap; justify-content: center; }
-    nav a { font-size: 0.88rem; }
-    .images img { width: 100%; max-width: 360px; }
-    .prices { flex-direction: column; align-items: center; }
-  }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
+  <!-- HEADER -->
   <header>
     <h1>Przygoda u Hobbita</h1>
     <nav>
       <a href="#oferta">Oferta</a>
       <a href="#program">Program</a>
-      
     </nav>
+
+    <button class="open-modal" type="button">Rezerwuj wycieczkę</button>
   </header>
 
+  <!-- MAIN -->
   <main>
+
+    <!-- OFERTA -->
     <section id="oferta">
       <h2>Opis wycieczki — pakiety</h2>
       <p>Wybierz pakiet dopasowany do Twojej przygody. Ceny podane w złotych monetach.</p>
 
       <div class="prices">
+
         <div class="card">
           <h3>Zwykła wycieczka</h3>
           <p>Spokojny spacer po hobbickich wzgórzach, wizyta przy okrągłych drzwiach i podstawowe atrakcje.</p>
@@ -147,9 +47,11 @@
           <p>Przewodnik, tradycyjny posiłek z kuchni Hobbita oraz wstęp do hobbickiego ZOO — pełna, całodzienna przygoda.</p>
           <div class="price">50 złotych monet</div>
         </div>
+
       </div>
     </section>
 
+    <!-- PROGRAM -->
     <section id="program">
       <h2>Co będziemy robić na wycieczce?</h2>
       <p>Oto przykładowy plan i atrakcje — zależnie od wybranego pakietu program może być rozszerzony.</p>
@@ -157,42 +59,99 @@
       <div class="card" style="display:inline-block; margin-top:16px;">
         <h3>Plan dnia</h3>
         <p><strong>Start:</strong> Spotykamy się przy głównej bramie wioski.</p>
-        <p><strong>Spacer:</strong> Przechadzka po pagórkowatych ścieżkach, podziwianie krajobrazów i hobbickich chat.</p>
-        <p><strong>Wnętrze norki:</strong> Zajrzymy do domu Hobbita — okrągłe drzwi, przytulna kuchnia i salon.</p>
-        <p><strong>Targ i smakołyki:</strong> Na targu można zobaczyć rękodzieło i spróbować przekąsek (część pakietów).</p>
-        <p><strong>Opowieści:</strong> Przewodnik (w pakiecie 40 i VIP) opowie o Bilbie, Frodo i dawnych przygodach.</p>
-        <p><strong>Gospoda:</strong> W wersji VIP zatrzymujemy się na tradycyjny posiłek.</p>
-        <p><strong>ZOO:</strong> VIP obejmuje wizytę w hobbickim ZOO — spotkamy puszyste długousy i inne niespotykane stworzenia.</p>
+        <p><strong>Spacer:</strong> Przechadzka po pagórkowatych ścieżkach.</p>
+        <p><strong>Wnętrze norki:</strong> Zajrzymy do domu Hobbita.</p>
+        <p><strong>Targ i smakołyki:</strong> Możliwość zakupu przekąsek.</p>
+        <p><strong>Opowieści:</strong> Legendy o Bilbie i Frodo.</p>
+        <p><strong>Gospoda:</strong> Tradycyjny posiłek (VIP).</p>
+        <p><strong>ZOO:</strong> Spotkanie magicznych stworzeń (VIP).</p>
       </div>
 
-      <p style="margin-top:14px; color:#ffd;">Na koniec krótkie podsumowanie i możliwość zakupienia pamiątek.</p>
+      <p style="margin-top:14px; color:#ffd;">Na koniec krótka możliwość zakupienia pamiątek.</p>
     </section>
 
-    
   </main>
 
+  <!-- FOOTER -->
   <footer>
     <p>Ta strona była stworzona przez Tigrana Senia</p>
   </footer>
 
-  <!-- Vanta.js tło - zachowano z oryginalnego kodu -->
+  <!-- MODAL — WYŚRODKOWANY -->
+  <div id="bookingModal" class="modal" hidden role="dialog" aria-labelledby="modalTitle">
+    <div class="modal-content" role="document">
+      <button class="modal-close" aria-label="Zamknij">×</button>
+
+      <h2 id="modalTitle">Rezerwacja wycieczki</h2>
+      <p>Wybierz pakiet:</p>
+
+      <div class="modal-options">
+        <button class="option-btn" type="button">Zwykła wycieczka – 30 zł</button>
+        <button class="option-btn" type="button">Wycieczka z przewodnikiem – 40 zł</button>
+        <button class="option-btn" type="button">Wycieczka VIP – 50 zł</button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- VANTA BACKGROUND -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.fog.min.js"></script>
   <script>
-    if (typeof VANTA !== 'undefined') {
-      VANTA.FOG({
-        el: "body",
-        mouseControls: true,
-        touchControls: true,
-        gyroControls: false,
-        minHeight: 200.00,
-        minWidth: 200.00,
-        highlightColor: 0xffcc00,
-        midtoneColor: 0x336633,
-        lowlightColor: 0x222222,
-        baseColor: 0x112233
-      });
-    }
+    VANTA.FOG({
+      el: document.body,
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      highlightColor: 0xffcc00,
+      midtoneColor: 0x336633,
+      lowlightColor: 0x222222,
+      baseColor: 0x112233
+    });
   </script>
+
+  <!-- SKRYPT MODALA Z POTWIERDZENIEM ZAKUPU -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const modal = document.getElementById("bookingModal");
+      const openBtn = document.querySelector(".open-modal");
+      const modalContent = modal.querySelector(".modal-content");
+
+      // Otwórz modal
+      openBtn.addEventListener("click", () => {
+        modal.hidden = false;
+      });
+
+      // Zamknij klikając X
+      modal.addEventListener("click", (e) => {
+        if (e.target.classList.contains("modal-close")) {
+          modal.hidden = true;
+        }
+      });
+
+      // Zamknij klikając poza modalem
+      window.addEventListener("click", (e) => {
+        if (e.target === modal) {
+          modal.hidden = true;
+        }
+      });
+
+      // Po kliknięciu w jedną z opcji — pokaż "Dziękujemy"
+      modal.addEventListener("click", (e) => {
+        if (e.target.classList.contains("option-btn")) {
+
+          modalContent.innerHTML = `
+            <button class="modal-close" aria-label="Zamknij">×</button>
+            <h2>Dziękujemy za rezerwację! 🧙‍♂️</h2>
+            <p>Bilet został pomyślnie zamówiony.</p>
+          `;
+        }
+      });
+
+    });
+  </script>
+
 </body>
 </html>
